@@ -1,3 +1,5 @@
+2006/7/25 -- released version 20060725_trunk
+
 2006/7/24 -- released version 20060724_trunk
 
 2006/7/23 -- released version 20060723_trunk
